--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- CSS  -->
     <link rel="stylesheet" type="text/css" href="./src/css/trang-chu.css" />
     <script src="./src/js/trang-chu-02.js"></script>
     <link
       rel="stylesheet"
       href="./assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
     />
-    <script src="./assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./src/js/main.js"></script>
     <link
       rel="stylesheet"
       href="assets/icon/fontawesome-free-6.7.2-web/css/all.min.css"
     />
+    <link rel="stylesheet" href="./src/css/searchAdvanceMobile.css" />
+    <!-- JS  -->
+    <script src="./assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./src/js/main.js"></script>
+    <script src="./src/js/onOffSeacrhAdvance.js"></script>
+    <script src="./src/js/onOffSeacrhAdvance.js"></script>
     <title>Trang Chủ</title>
 
     <!-- AVCCVSA -->
@@ -74,6 +79,7 @@
                     </button>
                   </div>
 
+                  <!-- Panel tìm kiếm nâng cao  -->
                   <div class="search-filter-container">
                     <div class="filter-group">
                       <label for="categoryFilter">
@@ -401,7 +407,10 @@
                     aria-label="Close"
                   ></button>
                 </div>
-                <div class="offcanvas-body offcanvas-fullscreen mt-20">
+                <div
+                  id="offcanvasbody"
+                  class="offcanvas-body offcanvas-fullscreen mt-20"
+                >
                   <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
                       <a
@@ -469,10 +478,107 @@
                       placeholder="TÌm kiếm"
                       aria-label="Search"
                     />
+                    <!-- Nút tìm kiếm nâng cao trên mobile  -->
+                    <button
+                      type="button"
+                      class="advanced-search-toggle"
+                      onclick="toggleMobileSearch()"
+                      title="Tìm kiếm nâng cao"
+                    >
+                      <i class="fas fa-sliders-h"></i>
+                    </button>
+
                     <button class="btn btn-outline-success" type="submit">
                       Search
                     </button>
                   </form>
+                  <div
+                    id="search-filter-container-mobile"
+                    class="search-filter-container"
+                  >
+                    <div class="filter-group">
+                      <label for="categoryFilter">
+                        <i class="fas fa-leaf"></i> Phân loại sản phẩm
+                      </label>
+                      <select id="categoryFilter" class="form-select">
+                        <option value="">Tất cả phân loại</option>
+                        <option value="cay-de-cham">Cây dễ chăm</option>
+                        <option value="cay-van-phong">Cây văn phòng</option>
+                        <option value="cay-de-ban">Cây để bàn</option>
+                        <option value="cay-duoi-nuoc">Cây dưới nước</option>
+                      </select>
+                    </div>
+
+                    <div class="filter-group">
+                      <label for="priceRange">
+                        <i class="fas fa-tag"></i> Khoảng giá
+                      </label>
+                      <div class="price-range-slider">
+                        <div class="price-input-group">
+                          <input
+                            type="number"
+                            id="minPriceMobile"
+                            placeholder="Từ"
+                            min="0"
+                          />
+                          <span class="price-separator">-</span>
+                          <input
+                            type="number"
+                            id="maxPriceMobile"
+                            placeholder="Đến"
+                            min="0"
+                          />
+                        </div>
+                        <div class="price-ranges">
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(0, 200000)"
+                          >
+                            Dưới 200k
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(200000, 500000)"
+                          >
+                            200k - 500k
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(500000, 1000000)"
+                          >
+                            500k - 1tr
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(1000000, 0)"
+                          >
+                            Trên 1tr
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="filter-actions">
+                      <button
+                        type="button"
+                        class="btn-search"
+                        onclick="performSearch()"
+                      >
+                        <i class="fas fa-search"></i> Tìm kiếm
+                      </button>
+                      <button
+                        type="button"
+                        class="btn-reset"
+                        onclick="resetMobileFilters()"
+                      >
+                        <i class="fas fa-redo-alt"></i> Đặt lại
+                      </button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
@@ -804,31 +910,5 @@
       </div>
       <!-- xong footer  -->
     </footer>
-
-    <!-- Đối với tìm kiếm trên mobile -->
-    <div class="mobile-search-container">
-      <input
-        class="form-control"
-        type="text"
-        placeholder="Tìm kiếm"
-        id="mobileSearchInput"
-        aria-label="Search"
-      />
-      <!-- Đặt nút tìm kiếm nâng cao trước, nút search sau -->
-      <button
-        type="button"
-        class="btn-toggle-search"
-        onclick="toggleMobileAdvancedSearch()"
-      >
-        <i class="fas fa-sliders-h"></i>
-      </button>
-      <button
-        type="button"
-        class="btn btn-outline-success"
-        onclick="performSearch('mobileSearchInput')"
-      >
-        <i class="fas fa-search"></i>
-      </button>
-    </div>
   </body>
 </html>
