--- a/pages/ho-so.html
+++ b/pages/ho-so.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="../src/css/ho-so.css">
   <link rel="stylesheet" href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../assets/icon/fontawesome-free-6.7.2-web/css/all.min.css">
+  <link rel="stylesheet" href="../src/css/searchAdvanceMobile.css">
   <!-- JS  -->
   <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   <script src="../src/js/Trang_chu.js"></script>
   <script src="../src/js/main.js"></script>
+  <script src="../src/js/onOffSeacrhAdvance.js"></script>
   <title>Giỏ hàng</title>
 </head>
 
@@ -431,10 +433,107 @@
                       placeholder="Tìm kiếm"
                       aria-label="Search"
                     />
+                    <!-- Nút tìm kiếm nâng cao trên mobile  -->
+                    <button
+                      type="button"
+                      class="advanced-search-toggle"
+                      onclick="toggleMobileSearch()"
+                      title="Tìm kiếm nâng cao"
+                    >
+                      <i class="fas fa-sliders-h"></i>
+                    </button>
+
                     <button class="btn btn-outline-success" type="submit">
                       Search
                     </button>
                   </form>
+                  <div
+                    id="search-filter-container-mobile"
+                    class="search-filter-container"
+                  >
+                    <div class="filter-group">
+                      <label for="categoryFilter">
+                        <i class="fas fa-leaf"></i> Phân loại sản phẩm
+                      </label>
+                      <select id="categoryFilter" class="form-select">
+                        <option value="">Tất cả phân loại</option>
+                        <option value="cay-de-cham">Cây dễ chăm</option>
+                        <option value="cay-van-phong">Cây văn phòng</option>
+                        <option value="cay-de-ban">Cây để bàn</option>
+                        <option value="cay-duoi-nuoc">Cây dưới nước</option>
+                      </select>
+                    </div>
+
+                    <div class="filter-group">
+                      <label for="priceRange">
+                        <i class="fas fa-tag"></i> Khoảng giá
+                      </label>
+                      <div class="price-range-slider">
+                        <div class="price-input-group">
+                          <input
+                            type="number"
+                            id="minPriceMobile"
+                            placeholder="Từ"
+                            min="0"
+                          />
+                          <span class="price-separator">-</span>
+                          <input
+                            type="number"
+                            id="maxPriceMobile"
+                            placeholder="Đến"
+                            min="0"
+                          />
+                        </div>
+                        <div class="price-ranges">
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(0, 200000)"
+                          >
+                            Dưới 200k
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(200000, 500000)"
+                          >
+                            200k - 500k
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(500000, 1000000)"
+                          >
+                            500k - 1tr
+                          </button>
+                          <button
+                            type="button"
+                            class="price-preset"
+                            onclick="setPrice(1000000, 0)"
+                          >
+                            Trên 1tr
+                          </button>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="filter-actions">
+                      <button
+                        type="button"
+                        class="btn-search"
+                        onclick="performSearch()"
+                      >
+                        <i class="fas fa-search"></i> Tìm kiếm
+                      </button>
+                      <button
+                        type="button"
+                        class="btn-reset"
+                        onclick="resetMobileFilters()"
+                      >
+                        <i class="fas fa-redo-alt"></i> Đặt lại
+                      </button>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
