--- a/pages/user-san-pham1.html
+++ b/pages/user-san-pham1.html
@@ -4,15 +4,14 @@
     <title>Chi tiết sản phẩm</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS  -->
     <link rel="stylesheet" href="../src/css/san-pham.css" />
     <link
       rel="stylesheet"
       href="../assets/icon/fontawesome-free-6.7.2-web/css/all.min.css"
     />
     <link rel="stylesheet" href="../src/css/search-styles.css" />
-    <script src="../src/js/search-common.js"></script>
-    <script src="../src/js/Trang_chu.js"></script>
-
+    <link rel="stylesheet" href="../src/css/searchAdvanceMobile.css" />
     <link
       rel="stylesheet"
       href="../assets/libs/bootstrap-5.3.3-dist/css/bootstrap.min.css"
@@ -21,8 +20,12 @@
       rel="stylesheet"
       href="../assets/libs/fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.min.css"
     />
+    <!-- JS  -->
+    <script src="../src/js/search-common.js"></script>
+    <script src="../src/js/Trang_chu.js"></script>
     <script src="../assets/libs/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <script src="../src/js/main.js"></script>
+    <script src="../src/js/onOffSeacrhAdvance.js"></script>
   </head>
 
   <body>
