--- a/pages/user-History.html
+++ b/pages/user-History.html
@@ -670,90 +670,33 @@
       </div>
 
       <h3 class="i-name-02">Lịch sử đặt hàng</h3>
+      <table>
+        <tr>
+          <th>DH001</th>
+          <th>Giao hàng thành công</th>
+          <th rowspan="2"></th>
+        </tr>
 
-      <div class="detail-orders">
-        <img src="../assets/images/CAY5.jpg" alt="" />
+        <tr>
+          <td>
+            <img
+              style="height: auto; width: 100px"
+              src="../assets/images/CAY1.PNG"
+              alt=""
+            />
+          </td>
+          <td>
+            <th>C</th>
+          </td>
+        </tr>
 
-        <div class="detail">
-          <div class="detail-product">
-            <p>Cây phát tài</p>
-            <p>750.000</p>
-          </div>
-
-          <div class="amount">
-            <p>Số lượng</p>
-            <p>x3</p>
-          </div>
-
-          <div class="total">
-            <p>Tổng</p>
-            <p>2.250.000</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="detail-orders">
-        <img src="../assets/images/CAY6.jpg" alt="" />
-
-        <div class="detail">
-          <div class="detail-product">
-            <p>Cây kim ngân</p>
-            <p>280.000</p>
-          </div>
-
-          <div class="amount">
-            <p>Số lượng</p>
-            <p>x4</p>
-          </div>
-
-          <div class="total">
-            <p>Tổng</p>
-            <p>1.120.000</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="detail-orders">
-        <img src="../assets/images/CAY7.jpg" alt="" />
-
-        <div class="detail">
-          <div class="detail-product">
-            <p>Cây trầu bà</p>
-            <p>120.000</p>
-          </div>
-
-          <div class="amount">
-            <p>Số lượng</p>
-            <p>x2</p>
-          </div>
-
-          <div class="total">
-            <p>Tổng</p>
-            <p>240.000</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="detail-orders">
-        <img src="../assets/images/CAY8.jpg" alt="" />
-
-        <div class="detail">
-          <div class="detail-product">
-            <p>Cây lan chi</p>
-            <p>120.000</p>
-          </div>
-
-          <div class="amount">
-            <p>Số lượng</p>
-            <p>x1</p>
-          </div>
-
-          <div class="total">
-            <p>Tổng</p>
-            <p>120.000</p>
-          </div>
-        </div>
-      </div>
+        <tr>
+          <td>Chi tiết món</td>
+        </tr>
+        <tr>
+          <td colspan="2" class="add-btn">Load +</td>
+        </tr>
+      </table>
 
       <div class="delete-button-back">
         <!-- Button trigger modal -->
